--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "deep-is": "^0.1.3",
     "define-properties": "^1.1.3",
     "define-property": "^2.0.2",
+    "delayed-stream": "^1.0.0",
     "detect-libc": "^1.0.3",
     "detect-newline": "^2.1.0",
     "dicer": "^0.2.5",
@@ -77,6 +78,7 @@
     "exec-sh": "^0.3.4",
     "exit": "^0.1.2",
     "express": "^4.16.4",
+    "express-session": "^1.17.1",
     "extend": "^3.0.2",
     "extend-shallow": "^3.0.2",
     "extsprintf": "^1.3.0",
@@ -112,8 +114,8 @@
     "har-schema": "^2.0.0",
     "has": "^1.0.3",
     "has-flag": "^3.0.0",
-    "has-value": "^1.0.0",
     "has-symbols": "^1.0.1",
+    "has-value": "^1.0.0",
     "has-values": "^1.0.0",
     "hosted-git-info": "^2.8.5",
     "html-escaper": "^2.0.0",
@@ -143,22 +145,24 @@
     "is-number": "^3.0.0",
     "is-obj": "^1.0.1",
     "is-path-inside": "^1.0.1",
+    "is-plain-object": "^2.0.4",
     "is-redirect": "^1.0.0",
     "is-regex": "^1.0.5",
+    "is-retry-allowed": "^1.1.0",
     "is-stream": "^1.1.0",
     "is-symbol": "^1.0.3",
     "is-typedarray": "^1.0.0",
     "is-windows": "^1.0.2",
     "is-wsl": "^1.1.0",
-    "delayed-stream": "^1.0.0",
     "isarray": "^0.0.1",
     "isexe": "^2.0.0",
     "isobject": "^3.0.1",
     "isstream": "^0.1.2",
+    "istanbul-lib-coverage": "^2.0.5",
     "istanbul-lib-instrument": "^3.3.0",
     "istanbul-lib-report": "^2.0.8",
     "istanbul-reports": "^2.2.7",
-    "istanbul-lib-coverage": "^2.0.5",
+    "jest": "^26.1.0",
     "jest-diff": "^24.9.0",
     "jest-docblock": "^24.9.0",
     "jest-get-type": "^24.9.0",
@@ -170,8 +174,6 @@
     "jest-serializer": "^24.9.0",
     "jest-validate": "^24.9.0",
     "jest-worker": "^24.9.0",
-    "is-retry-allowed": "^1.1.0",
-    "is-plain-object": "^2.0.4",
     "js-tokens": "^4.0.0",
     "jsbn": "^0.1.1",
     "jsesc": "^2.5.2",
@@ -208,9 +210,12 @@
     "mkdirp": "^0.5.1",
     "mongodb": "^3.2.7",
     "mongodb-core": "^3.2.7",
+    "mongoose": "^5.9.22",
     "mongoose-legacy-pluralize": "^1.0.2",
+    "morgan": "^1.10.0",
     "mpath": "^0.6.0",
     "mquery": "^3.2.1",
+    "multer": "^1.4.2",
     "nan": "^2.14.0",
     "natural-compare": "^1.4.0",
     "nice-try": "^1.0.5",
@@ -227,6 +232,7 @@
     "object-keys": "^1.1.1",
     "object-visit": "^1.0.1",
     "object.assign": "^4.1.0",
+    "object.getownpropertydescriptors": "^2.1.0",
     "object.pick": "^1.3.0",
     "on-headers": "^1.0.2",
     "p-each-series": "^1.0.0",
@@ -238,7 +244,9 @@
     "parse-json": "^4.0.0",
     "parse5": "^4.0.0",
     "pascalcase": "^0.1.1",
+    "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "passport-strategy": "^1.0.0",
     "path-dirname": "^1.0.2",
     "path-exists": "^3.0.0",
@@ -296,10 +304,10 @@
     "semver": "^5.7.0",
     "semver-diff": "^2.1.0",
     "send": "^0.16.2",
+    "session-file-store": "^1.4.0",
     "set-blocking": "^2.0.0",
     "set-value": "^2.0.0",
     "setprototypeof": "^1.1.0",
-    "object.getownpropertydescriptors": "^2.1.0",
     "shebang-command": "^1.2.0",
     "shebang-regex": "^1.0.0",
     "shellwords": "^0.1.1",
@@ -307,13 +315,13 @@
     "signal-exit": "^3.0.2",
     "sisteransi": "^1.0.4",
     "slash": "^2.0.0",
-    "slide": "^1.1.6",
     "sliced": "^1.0.1",
+    "slide": "^1.1.6",
     "snapdragon-node": "^2.1.1",
     "snapdragon-util": "^3.0.1",
     "source-map": "^0.5.7",
-    "source-map-url": "^0.4.0",
     "source-map-support": "^0.5.16",
+    "source-map-url": "^0.4.0",
     "sparse-bitfield": "^3.0.3",
     "spdx-correct": "^3.1.0",
     "spdx-exceptions": "^2.2.0",
@@ -363,7 +371,7 @@
   "devDependencies": {},
   "scripts": {
     "start": "nodemon ./bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Prajwol",
   "license": "ISC"
